# api/python/dungeoncoder/_generated/models/version_result_result.py
@@ -1,0 +1,84 @@
+from __future__ import annotations
+
+from collections.abc import Mapping
+from typing import Any, TypeVar, BinaryIO, TextIO, TYPE_CHECKING, Generator
+
+from attrs import define as _attrs_define
+from attrs import field as _attrs_field
+
+from ..types import UNSET, Unset
+
+
+
+
+
+
+
+T = TypeVar("T", bound="VersionResultResult")
+
+
+
+@_attrs_define
+class VersionResultResult:
+    """ 
+        Attributes:
+            extension (str): version of the extension (package.json), e.g. 0.1.0
+            api (str): version of this API description (info.version)
+     """
+
+    extension: str
+    api: str
+    additional_properties: dict[str, Any] = _attrs_field(init=False, factory=dict)
+
+
+
+
+
+    def to_dict(self) -> dict[str, Any]:
+        extension = self.extension
+
+        api = self.api
+
+
+        field_dict: dict[str, Any] = {}
+        field_dict.update(self.additional_properties)
+        field_dict.update({
+            "extension": extension,
+            "api": api,
+        })
+
+        return field_dict
+
+
+
+    @classmethod
+    def from_dict(cls: type[T], src_dict: Mapping[str, Any]) -> T:
+        d = dict(src_dict)
+        extension = d.pop("extension")
+
+        api = d.pop("api")
+
+        version_result_result = cls(
+            extension=extension,
+            api=api,
+        )
+
+
+        version_result_result.additional_properties = d
+        return version_result_result
+
+    @property
+    def additional_keys(self) -> list[str]:
+        return list(self.additional_properties.keys())
+
+    def __getitem__(self, key: str) -> Any:
+        return self.additional_properties[key]
+
+    def __setitem__(self, key: str, value: Any) -> None:
+        self.additional_properties[key] = value
+
+    def __delitem__(self, key: str) -> None:
+        del self.additional_properties[key]
+
+    def __contains__(self, key: str) -> bool:
+        return key in self.additional_properties
